--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,8 @@
 
   <mat-drawer-content class="example-site">
     <router-outlet></router-outlet>
+    <app-product></app-product>
   </mat-drawer-content>
 
 </mat-drawer-container>
+
