Añadida la lista de usuarios y el modulo al appComponent(routing)

--- a/src/app/users/list-user/list-user.component.html
+++ b/src/app/users/list-user/list-user.component.html
@@ -1,1 +1,12 @@
-<p>list-user works!</p>
+<mat-expansion-panel hideToggle>
+  <mat-expansion-panel-header>
+    <mat-panel-title>
+      Lista de usuarios
+    </mat-panel-title>
+  </mat-expansion-panel-header>
+  <mat-list role="list">
+    <mat-list-item role="listitem">User 1</mat-list-item>
+    <mat-list-item role="listitem">User 2</mat-list-item>
+    <mat-list-item role="listitem">User 3</mat-list-item>
+  </mat-list>
+</mat-expansion-panel>
