--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,8 @@
 
   <mat-drawer-content class="example-site">
     <router-outlet></router-outlet>
+    <app-form-user></app-form-user>
+    <app-list-user></app-list-user>
   </mat-drawer-content>
 
 </mat-drawer-container>
