Se lista array de categorias

--- a/src/app/categories/categories/categories.component.html
+++ b/src/app/categories/categories/categories.component.html
@@ -2,6 +2,9 @@
 
 
 </ng-container>
-<ng-container class="listaCategoria">
-
+<ng-container class="listaCategoria" *ngFor="let categorie of categories">
+  <div class="categoriaItem" *ngIf="categorie.estado">
+    <span>{{ categorie.nombre }}</span>
+    <button><mat-icon>remove</mat-icon></button>
+  </div>
 </ng-container>
