--- a/src/app/users/form-user/form-user.component.html
+++ b/src/app/users/form-user/form-user.component.html
@@ -1,5 +1,21 @@
-<div class="contenedor">
-    <form class="margin" [formGroup]="formLogin">
+<div>
+  <h1>
+    <mat-icon aria-hidden="false" aria-label="Example home icon">people</mat-icon>
+    Añadir usuario
+  </h1>
+    <form [formGroup]="formCrear">
+
+      <mat-form-field appearance="fill">
+        <mat-label>Nombre</mat-label>
+        <input type="text" matInput formControlName="nameFormControl" placeholder="Raúl">
+        <mat-error>{{errorMessageName}}</mat-error>
+      </mat-form-field>
+
+      <mat-form-field appearance="fill">
+        <mat-label>Apellidos</mat-label>
+        <input type="text" matInput formControlName="surnameFormControl" placeholder="Bravo Pradanas">
+        <mat-error>{{errorMessageSurname}}</mat-error>
+      </mat-form-field>
 
       <mat-form-field appearance="fill">
         <mat-label>Email</mat-label>
@@ -7,7 +23,7 @@
         <mat-error>{{errorMessageEmail}}</mat-error>
       </mat-form-field>
 
-      <mat-form-field appearance="fill" *ngIf="isCorrectEmail">
+      <mat-form-field appearance="fill">
         <mat-label>Contraseña</mat-label>
         <input type="password" matInput formControlName="passFormControl" placeholder="********">
         <mat-error>{{errorMessagePass}}</mat-error>
@@ -15,5 +31,4 @@
 
       <button class="margin" mat-raised-button color="primary">+</button>
     </form>
-  </div>
 </div>
