Best structure to both components.

--- a/src/app/shops/shops-create/shops-create.component.html
+++ b/src/app/shops/shops-create/shops-create.component.html
@@ -1,1 +1,3 @@
-<p>shops-create works!</p>
+<input mat-input (name)="name">
+<input mat-input  (value)="value">
+<button mat-raised-button (click)="sendValues()">Enter</button><p>shops-create works!</p>
