--- a/src/app/core/product/product.component.html
+++ b/src/app/core/product/product.component.html
@@ -1,4 +1,5 @@
 <h1>ADD PRODUCT</h1>
+<mat-icon> keyboard_arrow_down </mat-icon>
 
 <form novalidate [formGroup]="productForm" class="form">
   <table class="formContainer" cellspacing="0"><tr>
