--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,15 +1,15 @@
-.example-container {
+.sidebar-container {
     width: 100%;
     height: 100%;
 }
 
-.example-sidenav-content {
+.sidebar-content {
     display: flex;
     height: 100%;
     align-items: center;
     justify-content: center;
 }
 
-.example-sidenav {
-    padding: 20px;
+.sidebar {
+    padding: 10px;
 }
