--- a/src/app/core/product/product.component.html
+++ b/src/app/core/product/product.component.html
@@ -5,11 +5,11 @@
     <div class="primeraCol">
       <mat-form-field class="formContainer" appearance="fill">
         <mat-label>Name</mat-label>
-        <input matInput class="input" formControlName="name">
+        <input matInput class="input" formControlName="name" />
       </mat-form-field>
       <mat-form-field class="formContainer" appearance="fill">
         <mat-label>Price</mat-label>
-        <input matInput class="input" formControlName="price">
+        <input matInput class="input" formControlName="price" />
       </mat-form-field>
       <mat-form-field class="formContainer" appearance="fill">
         <mat-label>Categories</mat-label>
@@ -23,14 +23,26 @@
     <div class="segundaCol">
       <mat-form-field class="formContainer" appearance="fill">
         <mat-label>Description</mat-label>
-        <textarea matInput placeholder="Description" class="input" formControlName="description"></textarea>
+        <textarea
+          matInput
+          placeholder="Description"
+          class="input"
+          formControlName="description"
+        ></textarea>
       </mat-form-field>
       <mat-form-field class="formContainer" appearance="fill">
         <mat-label>Characteristics</mat-label>
-        <input class="input" matInput formControlName="characteristics">
+        <input class="input" matInput formControlName="characteristics" />
       </mat-form-field>
       <div class="formBtn">
-        <button mat-raised-button class="botonAnadir" type="submit" (click)="newProduct()"><mat-icon> add_box </mat-icon></button>
+        <button
+          mat-raised-button
+          class="botonAnadir"
+          type="submit"
+          (click)="newProduct()"
+        >
+          <mat-icon> add_box </mat-icon>
+        </button>
       </div>
     </div>
   </div>
@@ -41,14 +53,59 @@
   </p>-->
 </form>
 
-<h1 class="titulo">LIST OF PRODUCTS</h1>
 <mat-list role="list">
   <mat-divider></mat-divider>
   <ng-container *ngFor="let product of products">
-    <div class="container">
-      <mat-list-item role="listitem" class="product">{{ product.name }}</mat-list-item>
-      <button mat-raised-button class="botonProd" (click)="deleteProduct([product.name])"><mat-icon> keyboard_arrow_down </mat-icon></button>
-      <button mat-raised-button class="botonProd" ><mat-icon> delete_forever </mat-icon></button>
+    <div class="containerProd">
+      <mat-accordion>
+        <mat-expansion-panel
+          (opened)="panelOpenState = true"
+          (closed)="panelOpenState = false"
+        >
+          <mat-expansion-panel-header>
+            <div class="info">
+              <mat-panel-title>
+                <mat-list-item role="listitem" class="product">{{
+                  product.name
+                }}</mat-list-item>
+              </mat-panel-title>
+              <button
+                mat-raised-button
+                class="botonProd"
+                (click)="deleteProduct(product.name)"
+              >
+                <mat-icon> delete_forever </mat-icon>
+              </button>
+            </div>
+          </mat-expansion-panel-header>
+          <div class="infoOculta" id="{{ product.name }}">
+            <div class="primeraColOculta">
+              <mat-list role="list">
+                <mat-list-item role="listitem">{{
+                  product.price | currency: "EUR":true
+                }}</mat-list-item>
+              </mat-list>
+              <mat-list role="list">
+                <mat-list-item role="listitem">{{
+                  product.categories
+                }}</mat-list-item>
+              </mat-list>
+            </div>
+            <div class="segundaColOculta">
+              <mat-list role="list">
+                <mat-list-item role="listitem">{{
+                  product.characteristics
+                }}</mat-list-item>
+              </mat-list>
+              <mat-list role="list">
+                <mat-list-item role="listitem">{{
+                  product.description
+                }}</mat-list-item>
+              </mat-list>
+            </div>
+          </div>
+        </mat-expansion-panel>
+      </mat-accordion>
     </div>
     <mat-divider></mat-divider>
   </ng-container>
