--- a/src/app/users/form-user/form-user.component.html
+++ b/src/app/users/form-user/form-user.component.html
@@ -29,7 +29,7 @@
         <mat-error>{{errorMessagePass}}</mat-error>
       </mat-form-field>
 
-      <button class="margin" mat-raised-button color="primary" (click)="aceptar()">+</button>
+      <button class="margin" mat-raised-button color="primary" (click)="listaUser.addUser()">+</button>
     </form>
 </div>
 <app-list-user [nuevoUser]="nuevoUser"></app-list-user>
