--- a/src/app/core/product/product.component.scss
+++ b/src/app/core/product/product.component.scss
@@ -2,11 +2,6 @@
   min-width: 150px;
   max-width: 500px;
   width: 100%;
-  padding: 10px;
-  border: 2px solid darkgrey;
-  border-radius: 5px;
-  width: 90%;
-  padding: 20px;
 }
 
 .container{
@@ -54,4 +49,8 @@ mat-form-field{
 
 .segundaCol{
   text-align: center;
+}
+
+.mat-form-field + .mat-form-field {
+  margin-left: 8px;
 }
