--- a/src/app/core/product/product.component.scss
+++ b/src/app/core/product/product.component.scss
@@ -79,7 +79,6 @@ mat-form-field{
   width: 25%;
 }
 
-.mat-form-field + .mat-form-field {
-  margin-left: 8px;
+.listaProductos{
+  margin: 2em;
 }
-
