--- a/src/app/categories/categories/categories.component.scss
+++ b/src/app/categories/categories/categories.component.scss
@@ -5,7 +5,21 @@
   margin-bottom: 10px;
   margin-left: auto;
   border: 0.5px solid gray;
+  justify-content: space-around;
 }
-button{
-  margin-left: auto;
+.flexElement{
+  width: 20%;
+}
+.descripcion{
+  max-width: 400px;
+  word-wrap: break-word;
+}
+
+table {
+  width: 100%;
+}
+
+.mat-form-field {
+  font-size: 14px;
+  width: 100%;
 }
