Implementado el boton de añadir y de eliminar usuario

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,8 +6,8 @@
 .sidebar-content {
     display: flex;
     height: 100%;
-    align-items: center;
-    justify-content: center;
+    /* align-items: center;
+    justify-content: center; */
 }
 
 .sidebar {
