--- a/src/app/users/form-user/form-user.component.html
+++ b/src/app/users/form-user/form-user.component.html
@@ -29,8 +29,8 @@
         <mat-error>{{errorMessagePass}}</mat-error>
       </mat-form-field>
 
-      <button class="margin" mat-raised-button color="primary" (click)="listaUser.addUser()">+</button>
+      <button class="margin" mat-raised-button color="primary" (click)="addUser()">+</button>
     </form>
 </div>
-<app-list-user [nuevoUser]="nuevoUser"></app-list-user>
+<app-list-user></app-list-user>
 
