--- a/src/app/core/product/product.component.html
+++ b/src/app/core/product/product.component.html
@@ -18,7 +18,7 @@
           </mat-form-field>
           <mat-form-field class="formContainer" appearance="fill">
             <mat-label>Categories</mat-label>
-            <mat-select class="input" formControlName="category" [(value)]="category">
+            <mat-select class="input" formControlName="category" [(value)]="category" required>
               <mat-option *ngFor="let cat of categories" [value]="cat">
                 {{ cat }}
               </mat-option>
