--- a/src/app/shared/components/sidebar/sidebar.component.scss
+++ b/src/app/shared/components/sidebar/sidebar.component.scss
@@ -4,3 +4,10 @@
     justify-content: flex-start;
     align-items: center;
 }
+
+.color{
+
+background-color: lightblue;
+border-radius: 10px;
+
+}
