--- a/src/app/shops/shops-create/shops-create.component.html
+++ b/src/app/shops/shops-create/shops-create.component.html
@@ -1,14 +1,24 @@
+<div class="title-shop">
+  <mat-card-title>Shops</mat-card-title>
+</div>
+
 <form [formGroup]="formGroupShop" class="example-form">
-  <mat-form-field class="example-full-width" appearance="fill">
-    <mat-label>Name</mat-label>
-    <input matInput placeholder="Text..." formControlName="name">
-  </mat-form-field>
 
-  <mat-form-field class="example-full-width" appearance="fill">
-    <mat-label>Value</mat-label>
-    <input matInput placeholder="Text..." formControlName="value">
-  </mat-form-field>
+  <div class="inputs-shop">
 
-  <button mat-raised-button color="primary" (click)="anadirShop()">Añadir</button>
+    <mat-form-field class="example-full-width" appearance="fill">
+      <mat-label>Name</mat-label>
+      <input matInput placeholder="Text..." formControlName="name">
+    </mat-form-field>
+
+    <mat-form-field class="example-full-width" appearance="fill">
+      <mat-label>Value</mat-label>
+      <input matInput placeholder="Text..." formControlName="value">
+    </mat-form-field>
+
+  </div>
+  <div class="addShopBtn">
+      <button mat-raised-button color="primary" (click)="anadirShop()">Añadir</button>
+  </div>
 
 </form>
