--- a/src/app/categories/categories/categories.component.scss
+++ b/src/app/categories/categories/categories.component.scss
@@ -7,12 +7,17 @@
   border: 0.5px solid gray;
   justify-content: space-around;
 }
+
 .flexElement{
   width: 20%;
 }
 .descripcion{
   max-width: 400px;
   word-wrap: break-word;
+}
+
+.form-category{
+  margin-left: 50px;
 }
 
 table {
