Se añade link en el AppComponent
Todavía en construcción

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
 
   <mat-drawer #drawer class="example-sidenav" mode="side" [opened]="true">
     <app-sidebar></app-sidebar>
+    <a routerLink="/categories" routerLinkActive="active">Services</a>
   </mat-drawer>
 
   <mat-drawer-content class="example-site">
