--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -3,9 +3,9 @@
     <mat-divider></mat-divider>
     <mat-list-item *ngFor="let module of modules; let i = index">
         <mat-divider></mat-divider>
-        <div class="module-list-item">
+        <a [routerLink]="module?.url" class="module-list-item">
             <mat-icon mat-list-icon>{{ module.icon }}</mat-icon>
             <div mat-line>{{ module.name }}</div>
-        </div>
+        </a>
     </mat-list-item>
 </mat-list>
