gadiosfhaisdujf cambios adiçós

--- a/src/app/categories/categories/categories.component.html
+++ b/src/app/categories/categories/categories.component.html
@@ -33,10 +33,6 @@
         <br>
           La categoría ya existe
       </div>
-
-<!--       <input matInput [ngxMatColorPicker]="picker" [formControl]="colorCtr" [disabled]="disabled">
-      <ngx-mat-color-toggle matSuffix [for]="picker"></ngx-mat-color-toggle>
-      <ngx-mat-color-picker #picker [touchUi]="touchUi" [color]="color"></ngx-mat-color-picker> -->
     </div>
 
   </form>
@@ -54,7 +50,7 @@
       <span> {{ categorie.getNombre() }} </span>
     </div>
     <div class="flexElement">
-      <span class="descripcion"s> {{ categorie.getDescripcion() }}</span>
+      <span class="descripcion"> {{ categorie.getDescripcion() }}</span>
     </div>
     <div class="flexElement">
       <button (click) = "this.remove(categorie)"> <mat-icon>remove</mat-icon></button>
