comiteando mis cambios xd

--- a/src/app/categories/categories/categories.component.html
+++ b/src/app/categories/categories/categories.component.html
@@ -19,7 +19,7 @@
       <br>
       <br>
       <span> Descripcion: </span>
-      <input matInput  formControlName = "descripcion">
+      <input matInput  formControlngName = "descripcion">
 
       <div *ngIf = "categoryForm.get('descripcion')?.hasError('required') && buttonPressed" class = "error">
         Introduce tu descripcion
@@ -34,9 +34,8 @@
           La categoría ya existe
       </div>
 
-<!--       <input matInput [ngxMatColorPicker]="picker" [formControl]="colorCtr" [disabled]="disabled">
-      <ngx-mat-color-toggle matSuffix [for]="picker"></ngx-mat-color-toggle>
-      <ngx-mat-color-picker #picker [touchUi]="touchUi" [color]="color"></ngx-mat-color-picker> -->
+      <!-- <input class="form-control" [(colorPicker)]= "color" cpWidth='230px' cpHeight="100px"
+            [style.background]="color" /> -->
     </div>
 
   </form>
@@ -62,3 +61,4 @@
   </div>
 
 </ng-container>
+
