--- a/src/app/categories/categories/categories.component.html
+++ b/src/app/categories/categories/categories.component.html
@@ -19,7 +19,7 @@
       <br>
       <br>
       <span> Descripcion: </span>
-      <input matInput  formControlngName = "descripcion">
+      <input matInput  formControlName = "descripcion">
 
       <div *ngIf = "categoryForm.get('descripcion')?.hasError('required') && buttonPressed" class = "error">
         Introduce tu descripcion
@@ -33,9 +33,6 @@
         <br>
           La categoría ya existe
       </div>
-
-      <!-- <input class="form-control" [(colorPicker)]= "color" cpWidth='230px' cpHeight="100px"
-            [style.background]="color" /> -->
     </div>
 
   </form>
