--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<app-header></app-header>
+<app-header (onToggleMenu)="onClickMenuButton()"></app-header>
 <mat-divider></mat-divider>
 <mat-drawer-container class="sidebar-container" autosize>
 
   <mat-drawer #drawer class="sidebar" mode="side" [opened]="true">
-    <app-sidebar (onToggleMenu)="onClickMenuButton()"></app-sidebar>
+    <app-sidebar></app-sidebar>
   </mat-drawer>
 
   <mat-drawer-content class="sidebar-content">
