Cambios en el model de producto

--- a/src/app/features/product/components/product/product.component.html
+++ b/src/app/features/product/components/product/product.component.html
@@ -14,7 +14,7 @@
           </mat-form-field>
           <mat-form-field class="formContainer" appearance="fill">
             <mat-label>Price</mat-label>
-            <input matInput class="input" formControlName="price">
+            <input matInput class="input" formControlName="price" type="number">
           </mat-form-field>
           <mat-form-field class="formContainer" appearance="fill">
             <mat-label>Categories</mat-label>
