Añadido la funcionalidad de dar de alta a producto

--- a/src/app/features/product/components/product/product.component.html
+++ b/src/app/features/product/components/product/product.component.html
@@ -60,7 +60,7 @@
               <button
                 mat-raised-button
                 class="botonProd"
-                (click)="deleteProduct(product.name)"
+                (click)="deleteProduct(product.id)"
               >
                 <mat-icon> delete_forever </mat-icon>
               </button>
