--- a/src/app/features/shop/components/shops-create/shops-create.component.html
+++ b/src/app/features/shop/components/shops-create/shops-create.component.html
@@ -6,32 +6,73 @@
   <div class="inputs-shop">
     <mat-form-field class="example-full-width" appearance="fill">
       <mat-label>Name</mat-label>
-      <input matInput placeholder="Nombre" formControlName="name">
+      <input matInput placeholder="Nombre" formControlName="name" required>
+      <mat-error *ngIf="formGroupShop.get('name')?.errors && formGroupShop.get('name')?.hasError('required')">
+        {{ SHOP_ERRORS.name.notProvided }}
+      </mat-error>
     </mat-form-field>
 
     <mat-form-field class="example-full-width" appearance="fill">
       <mat-label>País</mat-label>
-      <input matInput placeholder="País" formControlName="country">
+      <mat-select formControlName="country" required>
+        <mat-option *ngFor="let country of COUNTRIES" [value]="country.name">
+          {{ country.name }}
+        </mat-option>
+      </mat-select>
+      <mat-error *ngIf="formGroupShop.get('country')?.errors && formGroupShop.get('country')?.hasError('required')">
+        {{ SHOP_ERRORS.name.notProvided }}
+      </mat-error>
     </mat-form-field>
 
     <mat-form-field class="example-full-width" appearance="fill">
       <mat-label>Provincia</mat-label>
-      <input matInput placeholder="Provincia" formControlName="province">
+      <div *ngIf="formGroupShop.get('country')?.value === 'España'; then spanishProv else otherProv"></div>
+      <ng-template #spanishProv>
+        <mat-select #spanish formControlName="province" required>
+          <mat-option *ngFor="let prov of PROVINCES" [value]="prov.name">
+            {{ prov.name }}
+          </mat-option>
+        </mat-select>
+      </ng-template>
+      <ng-template #otherProv>
+        <input matInput placeholder="Provincia" formControlName="province" required>
+      </ng-template>
+      <mat-error *ngIf="formGroupShop.get('province')?.errors && formGroupShop.get('province')?.hasError('required')">
+        {{ SHOP_ERRORS.province.notProvided }}
+      </mat-error>
     </mat-form-field>
 
     <mat-form-field class="example-full-width" appearance="fill">
       <mat-label>Dirección</mat-label>
-      <input matInput placeholder="Localidad" formControlName="street">
+      <input matInput placeholder="Localidad" formControlName="street" required>
+      <mat-error *ngIf="formGroupShop.get('location')?.errors && formGroupShop.get('location')?.hasError('required')">
+        {{ SHOP_ERRORS.location.notProvided }}
+      </mat-error>
     </mat-form-field>
 
     <mat-form-field class="example-full-width" appearance="fill">
       <mat-label>Calle</mat-label>
-      <input matInput placeholder="Dirección" formControlName="location">
+      <input matInput placeholder="Dirección" formControlName="location" required>
+      <mat-error *ngIf="formGroupShop.get('street')?.errors && formGroupShop.get('street')?.hasError('required')">
+        {{ SHOP_ERRORS.street.notProvided }}
+      </mat-error>
     </mat-form-field>
 
     <mat-form-field class="example-full-width" appearance="fill">
       <mat-label>CP</mat-label>
-      <input matInput placeholder="CP" type="number" formControlName="cp">
+      <div *ngIf="formGroupShop.get('country')?.value === 'España'; then spanishCp else otherCp"></div>
+      <ng-template #spanishCp>
+        <input matInput placeholder="CP" type="number" formControlName="cp" pattern="^(?:0[1-9]\d{3}|[1-4]\d{4}|5[0-2]\d{3})$" required>
+      </ng-template>
+      <ng-template #otherCp>
+        <input matInput placeholder="CP" type="number" formControlName="cp" required>
+      </ng-template>
+      <mat-error *ngIf="formGroupShop.get('cp')?.errors && formGroupShop.get('cp')?.hasError('required')">
+        {{ SHOP_ERRORS.cp.notProvided }}
+      </mat-error>
+      <mat-error *ngIf="formGroupShop.get('cp')?.errors && formGroupShop.get('cp')?.hasError('pattern')">
+        {{ SHOP_ERRORS.cp.invalid }}
+      </mat-error>
     </mat-form-field>
   </div>
   <div class="addShopBtn">
