Added unit tests to product service, added add and delete functions in product service

--- a/src/app/features/product/components/product/product.component.html
+++ b/src/app/features/product/components/product/product.component.html
@@ -31,7 +31,7 @@
             <textarea matInput placeholder="Description" class="input" formControlName="description"></textarea>
           </mat-form-field>
           <mat-form-field class="formContainer" appearance="fill">
-            <mat-label>Characteristics</mat-label>
+            <mat-label> Characteristics </mat-label>
             <input class="input" matInput formControlName="characteristics">
           </mat-form-field>
           <div class="formBtn">
@@ -60,7 +60,7 @@
               <button
                 mat-raised-button
                 class="botonProd"
-                (click)="deleteProduct(product.name)"
+                (click)="deleteProduct(product)"
               >
                 <mat-icon> delete_forever </mat-icon>
               </button>
