--- a/src/app/features/shop/components/shops-list/shops-list.component.html
+++ b/src/app/features/shop/components/shops-list/shops-list.component.html
@@ -3,20 +3,26 @@
 
   <mat-divider></mat-divider>
   <div class="shops-container-tittle">
-    <th mat-header-cell>Name</th>
-    <th mat-header-cell>Value</th>
-    <th mat-header-cell>Delete</th>
-
+    <th mat-header-cell>Nombre</th>
+    <th mat-header-cell>País</th>
+    <th mat-header-cell>Provincia</th>
+    <th mat-header-cell>Localidad</th>
+    <th mat-header-cell>Código postal</th>
+    <th mat-header-cell>Calle</th>
+    <th mat-header-cell>Modificar</th>
+    <th mat-header-cell>Eliminar</th>
   </div>
   <mat-divider></mat-divider>
-  <table *ngFor="let shop of shops">
+  <table *ngFor="let shop of shops" class="table-shops">
     <div class="shops-container">
-      <div>
-        <mat-icon>shop</mat-icon>
-        <td mat-cell>{{shop.name}}</td>
-      </div>
-      <td>{{shop.address.street}}</td>
-      <button mat-button color="warn" (click)="deleteShop(shop)"> Borrar </button>
+      <td mat-cell>{{shop.name}}</td>
+      <td mat-cell>{{shop.address.country}}</td>
+      <td mat-cell>{{shop.address.province}}</td>
+      <td mat-cell>{{shop.address.location}}</td>
+      <td mat-cell>{{shop.address.cp}}</td>
+      <td mat-cell>{{shop.address.street}}</td>
+      <td mat-cell><button mat-button color="warn" >Modificar</button></td>
+      <td mat-cell><button mat-button color="warn" (click)="deleteShop(shop)">Eliminar</button></td>
     </div>
     <mat-divider></mat-divider>
   </table>
