--- a/src/app/features/shop/components/shops-list/shops-list.component.html
+++ b/src/app/features/shop/components/shops-list/shops-list.component.html
@@ -15,7 +15,7 @@
         <mat-icon>shop</mat-icon>
         <td mat-cell>{{shop.name}}</td>
       </div>
-      <td>{{shop.value}}</td>
+      <td>{{shop.name}}</td>
       <button mat-button color="warn" (click)="deleteShop(shop)"> Borrar </button>
     </div>
     <mat-divider></mat-divider>
