--- a/src/app/features/product/components/product/product.component.scss
+++ b/src/app/features/product/components/product/product.component.scss
@@ -76,9 +76,18 @@ mat-form-field{
 
 .primeraColOculta, .segundaColOculta{
   margin-left: 5%;
-  width: 25%;
+  width: 50%;
 }
 
 .listaProductos{
   margin: 2em;
+}
+
+span{
+  margin-left: 0.2cm;
+}
+
+img{
+  height: 3cm;
+  width: 3cm;
 }
